# pretest

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.cloud  Dockerfile.dev  Dockerfile.local  Dockerfile.stg  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt  run_web.cloud.sh  run_web.sh  wait-for-postgres.sh
.github/workflow/: ci.yaml
.github/workflows/: cd.yaml  ci.yaml
api/: models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_product_productsnapshot.py
infra/: main.tf  outputs.tf  variables.tf
infra/ecr/: ecr.tf  outputs.tf
infra/ecs/: alb.tf  cluster.tf  iam.tf  outputs.tf  service.tf  task_definition.tf  variables.tf
infra/rds/: output.tf  rds.tf  variables.tf
infra/vpc/: outputs.tf  vpc.tf
pretest/: authenticate.py  authentication.py  config.py  exception_handler.py  models.py  serializers.py  settings.py  urls.py
