[project]
name = "phantom-mask-backend"
version = "0.1.0"
description = "A Project for interview pretest"

# linter configuration
[tool.ruff]
exclude = [
    "migrations",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E501", "D", "PLC0415", "ARG002"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"

[tool.black]
skip-string-normalization = true


# unit test configuration
[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.config.base"
python_files = "*/tests/*.py"

[tool.ruff.per-file-ignores]
"*/tests/*.py" = ["S101", "PLR2004", "ARG001"]
